# wait-for-me

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: coverage.yml
examples/: async_std.rs  async_std_multi.rs  async_std_one.rs  smol.rs  smol_timeout.rs  tokio.rs  tokio_timeout.rs
src/: lib.rs  multi.rs  oneshot.rs
