[package]
name = "wait-for-me"
version = "0.1.0"
authors = ["wolf4ood <enrico.risa@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
piper = { version = "0.1" }

[dev-dependencies]
futures-executor = "0.3.4"
futures-util = "0.3.4"
async-std = { version = "1.5.0", features = ["attributes"] }
tokio = { version = "0.2", features = ["full"] }
smol = { version = "0.1" }
smol-potat = { version = "0.2" }


